--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,40 @@ img {
   display: block;
   max-width: 100%;
 }
+
+.section {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: auto;
+    margin-top: 50px;
+}
+
+.wrapper {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+}
+
+button {
+  width: auto;
+  height: auto;
+  background-color: #008CBA;
+  border: none;
+  border-radius: 5;
+  color: white;
+  padding: 10px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+
+button:disabled,
+button[disabled]{
+  border: 1px solid #999999;
+  background-color: #cccccc;
+  color: #666666;
+}
